# iON

./: .gitignore  CHECKLIST.md  CMakeLists.txt  README.md  design.md  problem.md  test.dot
.cache/clangd/index/: CFG.h.499C624440B1E510.idx  GTestMatches.h.1F1F2A5846A7D9B1.idx  IR.h.B6584D9082CBCA23.idx  InterferenceGraph.cpp.C2D076B072BF4B65.idx  Liveness.cpp.E10A71B0587ECE4F.idx  Liveness.h.90C6BD4FD6C499EC.idx  Parser.cpp.98C359A6BF839A30.idx  Parser.h.5F4DB47B51CB7DB6.idx  Reader.cpp.5585E56FECD91890.idx  Reader.h.7B8D1A71B37F6F06.idx  TestDiamondCFG.cpp.1E1F0A1CCA371B41.idx  TestLiveness.cpp.D0871E8E01BCAD49.idx  TestNestedLoopCFG.cpp.9128439F1065C797.idx  TestSimpleLoopCFG.cpp.EC5737A5F8B51919.idx  TestStraightLineDAG_CFG.cpp.7D247CD971C119ED.idx  main.cpp.3B9B45FE6D64B694.idx
.github/workflows/: ci.yml
docs/IR and examples/: README.md  examples.md
docs/iON_IR/: Diamond.ion  NestedLoop.ion  SimpleLoop.ion  StraightLineDAG.ion
include/ion/: CFG.h  CFGConstructor.h  IR.H  IR.h  IRParser.h  Lexer.h  Liveness.h  Reader.h  Token.h
include/utils/: README.md
include/utils/h/: Parser.h  TokenizationOperations.h  stringOperations.h
include/utils/impl/: Parser.cpp  TokenizationOperations.cpp  stringOperations.cpp
src/: CFGConstructor.cpp  IR.cpp  IRParser.cpp  Lexer.cpp  Liveness.cpp  Reader.cpp  main.cpp
tests/: TestCFG.cpp  TestDiamondCFG.cpp  TestLiveness.cpp  TestNestedLoopCFG.cpp  TestSimpleLoopCFG.cpp  TestStraightLineDAG_CFG.cpp  test_frontend.cpp  test_liveness.cpp  test_main_catch2.cpp  test_main_gtest.cpp
tests/utils/: GTestMatches.h  OutputStreamHandling.h
